appId: com.dbatson09.MealsToGo
---
- openLink:
    link: https://staging.lunarcrush.com
    autoVerify: true
- waitForAnimationToEnd
- inputText: lunar
- tapOn: Password
- inputText: spooner
- tapOn: Sign in
- tapOn: Never
- runFlow:
      when:
          visible: Measure
      commands:
          - tapOn:
                id: closeOnboardingModalButton
 
